<resources>
    <string name="app_name">eCom</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_city">City</string>
    <string name="prompt_postal_code">Postal code</string>
    <string name="prompt_street">Street</string>
    <string name="prompt_street_number">Street number</string>
    <string name="prompt_flat_number">Flat number</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_account">Account</string>

    <string name="bumble">"You think it\'s funny to take screenshots of people\'s NFTs, huh? Property theft is a joke to you? I\'ll have you know that the blockchain doesn\'t lie. I own it. Even if you save it, it's my property. You are mad that you don't own the art that I own.
Delete that screenshot."</string>

    <string name="price">%1$s$</string>
    <string name="network_error">Problem with the internet connection occurred, cached data is displayed.</string>
    <string name="authorization_required">To do this action you have to sign in.</string>
    <string name="product_added_to_cart">Product was successfully added to cart.</string>
    <string name="add_to_cart_network_error">Network error occurred while adding product to cart.</string>
    <string name="registration_error">Make sure you have network connection and provided data is correct.</string>
    <string name="snackbar_ok">OK</string>
    <string name="home_categories_header">Explore by category</string>
    <string name="see_all">See all</string>
    <string name="home_all_products_header">Popular products</string>
    <string name="short_text">%1$s…</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="try_again">Try again</string>
</resources>
